# pyalma

./: .gitignore  ACCEPTANCE.md  Dockerfile  LICENSE  README.md  all-documents.html  apidocs-help.html  classIndex.html  cli_ssh_connection.py  docker-compose.yml  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyalma.anndatareader.html  pyalma.cli.html  pyalma.fileReader.FileReader.html  pyalma.fileReader.html  pyalma.html  pyalma.imageReader.html  pyalma.local.LocalFileReader.html  pyalma.local.html  pyalma.pdfreader.html  pyalma.ssh.SshClient.html  pyalma.ssh.html  pyproject.toml  requirements.txt  searchindex.json  setup.py  ssh_connection.py  undoccedSummary.html
.github/workflows/: build-run-docker-compose.yml  pydoctor.yml  pytest.yml
pyalma/: __init__.py  anndatareader.py  cli.py  debug.py  fileReader.py  imageReader.py  kerberos.py  local.py  pdfreader.py  securessh.py  ssh.py  ssh.py.rej  ssh_closed.py
pyalma/config/: messages.yaml
src/pyalma/: __init__.py  cli.py  fileReader.py  ssh.py
src/sshconnection/: __init__.py  local.py  ssh.py
sshconnection/: cli.py  fileReader.py  sshconnection.py
tests/: global_tests.py  test_debug.py  test_filereader.py  test_local.py  test_ssh.py
tests/integration/: test_remote.py
tests/integration/test_files/: hello.sh  test.csv  test.tsv
utils/: performance_tests.py
