[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalma"
version = "0.1.0"
description = "A simple SSH connection package"
authors = [{name = "RSE team", email = "mira.sarkis@icr.ac.uk"}]

[tool.setuptools]
packages = ["pyalma"]

[tool.setuptools.package-data]
pyalma = ["*.py"]

[project.scripts]
pyalma-cli = 'pyalma.cli:main'