[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalma"
version = "0.1.0"
description = "A simple SSH connection package"
authors = [{name = "RSE team", email = "mira.sarkis@icr.ac.uk"}]

dependencies = [
    "pandas==2.2.3",
    "paramiko==3.5.1",
    "pysam==0.23.0",
    "scanpy==1.11.0",
    "pytest==7.4.4",
    "pytest-mock>=3.6.1"

]

[tool.setuptools]
packages = ["pyalma"]  

[tool.setuptools.package-data]
pyalma = ["*.py"]

[project.scripts]
pyalma-cli = 'pyalma.cli:main'