[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build", "setuptools_scm[toml]>=8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalma"
description = "A simple SSH connection package"
authors = [{name = "RSE team", email = "mira.sarkis@icr.ac.uk"}]
dynamic = ["version"]

dependencies = [
    "pandas==2.2.3",
    "paramiko>=3.5.0",
    "pysam==0.23.0",
    "scanpy>1.10.0",
    "pypdf>=5.3.0",
    "PyMuPDF>=1.25.3",
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-mock>=3.6.0",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pyalma = ["*.py", "config/*.yaml"]

[project.scripts]
pyalma-cli = 'pyalma.cli:main'

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"